flapivor/tests/m3/hopix/typechecker/good/41-pattern-matching-05.hopix
type Option<a> = None | Some (a)

val x : Int = case Some<Int>(42) { Some<Int>(x : Int) => x | None<Int> => 0 }