flapivor/tests/m3/hopix/typechecker/bad/55-constructor-matching-03.hopix
type T = A | B (Int)

val main : Int = case A<> { B<> => 0 }